# opengl-scene

./: .gitmodules  CMakeLists.txt  main.cpp  test.glb  test_physics.glb
lib/glad/include/glad/: gl.h
resources/: anim.gltf  final.gltf  light.gltf  scene.gltf  scene4.gltf  scene5.gltf  scene6.gltf  test.gltf
resources/shaders/: gizmo.frag  pbr.frag  postprocessing.frag  standard.vert  test.frag  test.vert
resources/shaders/deferred/: ambient.frag  directional.frag  point.frag  spot.frag
resources/shaders/postprocessing/: hdr.frag
resources/shaders/shared/: lightning.glsl  normal.glsl  pbr.glsl  screen.vert  uniforms.glsl  util.glsl
resources/shaders/sky/: skybox.frag  skybox.vert
scene/v1/: scene.gltf
src/: main.cpp
src/core/: component.cpp  component.h  constants.h  controllable.cpp  controllable.h  dayTimer.cpp  dayTimer.h  entity.cpp  entity.h  input.cpp  input.h  physicsComponent.cpp  physicsComponent.h  physicsWorld.h  scene.cpp  scene.h  settings.cpp  settings.h  time.cpp  time.h  transform.cpp  transform.h  util.h  volumes.cpp  volumes.h  window.cpp  window.h
src/data/: importer.cpp  importer.h  stb_impl.cpp
src/debug/: gizmoRenderer.cpp  gizmoRenderer.h
src/physics/: physicsComponent.cpp  physicsComponent.h  physicsWorld.cpp  physicsWorld.h
src/rendering/: animation.cpp  animation.h  animationController.cpp  animationController.h  armature.cpp  armature.h  camera.cpp  camera.h  dayCycle.cpp  dayCycle.h  guiRenderer.cpp  guiRenderer.h  light.cpp  light.h  lod.cpp  lod.h  material.cpp  material.h  mesh.cpp  mesh.h  meshRenderer.cpp  meshRenderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skyLight.cpp  skyLight.h  skybox.cpp  skybox.h  texture.cpp  texture.h  treeRenderer.cpp  treeRenderer.h
src/shaders/: test.frag  test.vert
